뷰어 바꾸기

--- a/main/templates/product/arduino_trashcan.html
+++ b/main/templates/product/arduino_trashcan.html
@@ -5,14 +5,14 @@
 
     <div class="info_detail">
        <div class="prd_title_sub" style="padding-top:-10px;">
-            <div class="content_sub">코딩키트</div>
+            <div class="content_sub">코딩키트&nbsp;</div>
             <img src="{% static 'resource/img/sub/detail_set.png' %}" alt="set" class="content_sub" style="padding-top:3px;">
-            <div class="content_sub">아두이노</div>
+            <div class="content_sub">&nbsp;아두이노&nbsp;</div>
             <img src="{% static 'resource/img/sub/detail_set.png' %}" alt="set" class="content_sub" style="padding-top:3px;">
-            <div class="content_sub">스마트 휴지통 상세보기</div>
+            <div class="content_sub">&nbsp;스마트 휴지통 상세보기</div>
         </div>
 
-        <img src="{{prd_detail.img}}" alt="상품상세 이미지" style="padding-top:80px; padding-bottom:80px;">
+        <img src="{{prd_detail.img}}" alt="상품상세 이미지" style="padding-top:80px;">
 
         <div class="point_content">Outline</div>
         <div class="content_gray">
@@ -23,10 +23,9 @@
             <span>쉽고 재미있게! 기초부터 응용까지! 상상을 현실로 만드는 뚝딱 코딩키트를 만나보세요.</span><br/>
         </div>
 
-        <div class="point_content" style="padding-top:80px;">Curriculum</div>
+        <div class="point_content">Curriculum</div>
 
         <div class="content"><strong>part1. 환경구축 </strong></div>
-        <div style="padding-bottom:20px;"></div>
         <div class="content_curriculum">
             <li>
                  <div style="width:100%"><b>1. </b>아두이노 설치
@@ -40,8 +39,7 @@
             </li>
         </div>
 
-        <div class="content"><strong>part2. 익히기 </strong></div>
-        <div style="padding-bottom:20px;"></div>
+        <div class="content" style="padding-top:20px;"><strong>part2. 익히기 </strong></div>
         <div class="content_curriculum">
             <li>
                  <div style="width:100%"><b>1. </b>변수
@@ -70,8 +68,7 @@
             </li>
         </div>
 
-        <div class="content"><strong>part3. 다루기</strong></div>
-        <div style="padding-bottom:20px;"></div>
+        <div class="content"  style="padding-top:20px;"><strong>part3. 다루기</strong></div>
         <div class="content_curriculum">
             <li>
                  <div style="width:100%"><b>1. </b>시리얼모니터
@@ -90,8 +87,7 @@
             </li>
         </div>
 
-        <div class="content"><strong>part4. 키트 만들기 </strong></div>
-        <div style="padding-bottom:20px;"></div>
+        <div class="content" style="padding-top:20px;"><strong>part4. 키트 만들기 </strong></div>
         <div class="content_curriculum">
             <li>
                  <div style="width:100%"><b>1. </b>스마트 휴지통 키트 만들기
@@ -110,7 +106,7 @@
             </li>
         </div>
 
-         <div class="point_content" style="padding-top:80px;">Detail</div>
+         <div class="point_content">Detail</div>
          {% include "product/trashcan.html" %}
 
     </div>
