상단 메뉴 고정

--- a/main/templates/class/class_detail.html
+++ b/main/templates/class/class_detail.html
@@ -175,7 +175,7 @@
 
         function top_val()
         {
-            var offset = $("#top").offset();
+            var offset = $("#sub_visual_class_detail").offset();
             $('html, body').animate({scrollTop : offset.top}, 400);
         }
 
