--- a/main/templates/main/index_runcoding.html
+++ b/main/templates/main/index_runcoding.html
@@ -289,7 +289,10 @@
     </script>
 
     {% include "common/footer.html" %}
- <a class="btn" href="javascript:void(0);" onclick="javascript:top_val();" style="display:scroll;position:fixed;bottom:15px;right:15px;"><img src="{% static 'resource/img/sub/top.png' %}" style="float:right;"></a><br/>
+    <a class="btn" href="javascript:void(0);" onclick="javascript:top_val();" style="display:scroll;position:fixed;bottom:15px;right:15px;">
+        <img src="{% static 'resource/img/sub/top.png' %}" style="float:right;">
+    </a>
+    <br/>
 
 
 </body></html>
