--- a/main/templates/class/class_detail.html
+++ b/main/templates/class/class_detail.html
@@ -143,7 +143,6 @@
                         <a href="javascript:void(0);" class="btn cart" onClick="javascript:goOrder(1);">장바구니 담기</a>
                         <a class="btn buy" href="javascript:void(0);" onClick="javascript:goOrder(2);">바로구매</a>
                     </div>
-                    <a class="btn" href="javascript:void(0);" onclick="javascript:top_val();"><img src="{% static 'resource/img/sub/top.png' %}" style="float:right;"></a><br/>
                     <input type="hidden" name="message" value="{{message}}" readonly>
                 </div>
             </div>
@@ -293,6 +292,10 @@
 
         }
     </script>
+
+    <a class="btn" href="javascript:void(0);" onclick="javascript:top_val();" style="display:scroll;position:fixed;bottom:15px;right:15px;">
+         <img src="{% static 'resource/img/sub/top.png' %}" style="float:right;">
+    </a><br/>
 
 </body>
 </html>
