--- a/main/templates/product/common.html
+++ b/main/templates/product/common.html
@@ -48,7 +48,7 @@
 
             <input type="radio" name="accordion" id="detail_faq05">
             <label for="detail_faq05">KC 인증을 받았나요? <em></em></label>
-            <div  style="border-bottom: 1px solid #e3e3e2;">
+            <div>
                 <div class="content_faq" style="padding-top:10px;">본 제품은 교육용 키트 입니다.</div>
                 <div class="content_faq">직류전원 42V 이하 또는 교류전원 30V 이하의 입력전원을 사용하는 교육용 키트는</div>
                 <div class="content_faq">전기용품 및 생활용품 안전관리법 시행규칙 제3조(안전관리대상제품의 범위)에 해당되지 않아</div>
