상세페이지 버전2

--- a/main/templates/class/class_list.html
+++ b/main/templates/class/class_list.html
@@ -77,6 +77,13 @@
                     <button type="button" style="cursor:pointer" class="btn_filter" onclick="javascript:goSearchCategory('아두이노');">아두이노</button>
                     <button type="button" style="cursor:pointer" class="btn_filter" onclick="javascript:goSearchCategory('엠블럭');">엠블럭</button>
                 </div>
+                 <div class="tagList" style="padding-top:30px;">
+                    <span>TAGS</span>
+                     <div class="Tag" style="float:left">#서보모터</div>
+                     <div class="Tag" style="float:left;">#초음파 센서</div>
+                     <div class="Tag" style="float:left">#러닝캠</div>
+                     <div class="Tag" style="float:left;">#러닝봇</div>
+                </div>
             </div>
         </div>
     </div>
