--- a/main/templates/class/class_list.html
+++ b/main/templates/class/class_list.html
@@ -37,7 +37,7 @@
 
                     <div class="text_area">
                         <span>
-                            <small class="type">{{classList_detail.keyword}}</small>
+                            <small class="type">{{classList_detail.title2}}</small>
                             {{classList_detail.title}}
                         </span>
                         <div class="ckInfo">
@@ -83,6 +83,7 @@
                      <div class="Tag" style="float:left;">#초음파 센서</div>
                      <div class="Tag" style="float:left">#러닝캠</div>
                      <div class="Tag" style="float:left;">#러닝봇</div>
+                     <div class="Tag" style="float:left;">#AI</div>
                 </div>
             </div>
         </div>
