--- a/main/templates/payment/order.html
+++ b/main/templates/payment/order.html
@@ -99,7 +99,7 @@
                                                     <td>
                                                         <input type="hidden" id="prd_code_{{forloop.counter0}}" name="prd_code_{{forloop.counter0}}" value="{{orderDetail.prd.prd_code}}">
                                                          <div class="pull-left">
-                                                             <span>{{orderDetail.prd.title}}</span>
+                                                             <span>{{orderDetail.prd.title}}({{orderDetail.prd.keyword}})</span>
                                                          </div>
                                                     </td>
 
@@ -468,41 +468,41 @@
                     <a href="javascript:void(0);" class="btn order_complete" onClick="javascript:gopg();">주문하기</a>
                     <a href="javascript:void(0);" class="btn order_complete" onClick="javascript:goPay('noUser');">비회원 주문하기</a>
                 </div>
-<!--                <div id="iamport-naverpay-product-button" class="btn-center" style="margin-bottom:40px;"></div>-->
+                <div id="naverpay_btn" class="btn-center" style="margin-bottom:40px;"></div>
 
              </tr>
          </div>
     </tr>
 </div>
 
-<!-- <script type="text/javascript" src="//pay.naver.com/customer/js/naverPayButton.js"></script>-->
-<!-- <script type="text/javascript" src="//pay.naver.com/customer/js/mobile/naverPayButton.js"></script>-->
+ <script type="text/javascript" src="//pay.naver.com/customer/js/naverPayButton.js"></script>
+ <script type="text/javascript" src="//pay.naver.com/customer/js/mobile/naverPayButton.js"></script>
 
 
 {% include "common/banner_bottom.html" %}
 {% include "common/footer.html" %}
     <script>
-<!--        naver.NaverPayButton.apply({-->
-<!--            BUTTON_KEY: "네이버에서 전달받은 버튼생성키",-->
-<!--            TYPE: "C", //버튼 스타일-->
-<!--            COLOR: 1, //버튼 색상타입-->
-<!--            COUNT: 2, // 네이버페이버튼 + 찜하기버튼 모두 출력 여부-->
-<!--            ENABLE: "Y", //네이버페이 활성여부(재고부족 등에는 N으로 비활성처리)-->
-<!--            EMBED_ID: "iamport-naverpay-product-button", //네이버페이 버튼 UI가 부착될 HTML element의 ID-->
-<!--            BUY_BUTTON_HANDLER : function() {-->
-<!--                //중략-->
-<!--                //핸들러 내에서 아임포트 네이버페이 결제 함수 호출-->
-<!--                 $("input[type=hidden][name=pg]").val("naverco");-->
-<!--                 goPay();-->
-<!--&lt;!&ndash;                IMP.request_pay(param);&ndash;&gt;-->
-<!--            },-->
-<!--            WISHLIST_BUTTON_HANDLER : function() {-->
-<!--                //중략-->
+        naver.NaverPayButton.apply({
+            BUTTON_KEY: "CE196A42-5C47-46D0-A871-00BB22E69FB6",
+            TYPE: "A", //버튼 스타일
+            COLOR: 1, //버튼 색상타입
+            COUNT: 1, // 네이버페이버튼 + 찜하기버튼 모두 출력 여부
+            ENABLE: "Y", //네이버페이 활성여부(재고부족 등에는 N으로 비활성처리)
+            EMBED_ID: "naverpay_btn", //네이버페이 버튼 UI가 부착될 HTML element의 ID
+            BUY_BUTTON_HANDLER : function() {
+                //중략
+                //핸들러 내에서 아임포트 네이버페이 결제 함수 호출
+<!--                 $("input[type=hidden][name=pg_type]").val("naverco");-->
+<!--                 goPay('user');-->
+<!--                IMP.request_pay(param);-->
+            },
+            WISHLIST_BUTTON_HANDLER : function() {
+                //중략
 
-<!--                //핸들러 내에서 아임포트 네이버페이 찜하기 함수 호출(iamport.payment-1.1.6.js부터 지원됨)-->
-<!--                IMP.naver_zzim(param);-->
-<!--            }-->
-<!--        });-->
+                //핸들러 내에서 아임포트 네이버페이 찜하기 함수 호출(iamport.payment-1.1.6.js부터 지원됨)
+                IMP.naver_zzim(param);
+            }
+        });
 
        function removeComma(str)
        {
