--- a/main/templates/class/class_detail.html
+++ b/main/templates/class/class_detail.html
@@ -62,7 +62,7 @@
                                     <span class="li_title">옵션 </span>
 
                                      <select id="options_level" name="options_level" style="width:200px; height:24px; border:1px solid #d4d4d4; line-height:24px; font-size:12px;"">
-                                        <option value="0">--------------필수옵션----------</option>
+                                        <option value="0">----------아두이노 or 엠블럭----------</option>
                                         {% for tag_info in prd_tag %}
                                         <option value={{tag_info.prd_code}}>{{tag_info.keyword}}</option>
                                         {% endfor %}
